--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "aos": "^2.3.4",
     "firebase": "^10.5.2",
+    "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
